--- a/styles/components/_footer.scss
+++ b/styles/components/_footer.scss
@@ -1,3 +1,4 @@
+// footer styling starts
 .bottom {
     margin-top: 75px;
     border-top: 1px solid #e6e5e1;
@@ -11,10 +12,8 @@
     position: absolute;
     width: 40px;
     height: 2px;
-    // color: black;
     background-color: #a8edea;
 }
-
 
 .bottom-container {
     display: flex;
@@ -22,23 +21,119 @@
     padding-top: 75px;
 }
 
+.logo-mobile {
+    display: none;
+}
+
+.footer-flex-container {
+    display: flex;
+    justify-content: space-between;
+    width: 60%;
+}
 
 
+// contacts flex container
 .contacts-container {
     width: 33%;
+    font-weight: 400;
+}
+
+@media (max-width: 1200px) {
+    .contacts-container {
+        width: 30%;
+        margin-left: 20px;
+    }
+}
+
+@media (max-width: 770px) {
+    .bottom-container {
+        flex-direction: column;
+    }
+
+    .contacts-container {
+        display: flex;
+        width: 100%;
+        justify-content: space-between;
+    }
+
+    .contacts-container i {
+        padding: 18px 0 12px;
+    }
+
+    .foot-flex-1 {
+        width: 18%;
+        float: left;
+        margin-top: 0;
+    }
+
+    .contacts {
+        width: 33%;
+    }
+
+    .social-bottom {
+        width: 10%;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .services {
+        width: 27%;
+    }
+
+    .footer-flex-container {
+        display: flex;
+        justify-content: space-around;
+        width: 100%;
+    }
+}
+
+// contacts container flex to top
+@media (max-width: 610px) {
+    .bottom-container {
+        width: 100%;
+    }
+
+    .contacts-container {
+        justify-content: space-between;
+        margin: 0 12%;
+        padding: -50px;
+        flex-direction: row;
+        width: 100%;
+    }
+
+    .logo-mobile {
+        display: initial;
+        margin: 0 auto;
+        margin-top: -25px;
+        margin-bottom: 20px;
+    }
+
+    .social-bottom {
+        margin-right: 32%;
+    }
+
+    .foot-flex-1  {
+        display: none;
+    }
+
+    .logo-bottom {
+        display: none;
+    }
+
+    .instagram {
+        display: none;
+    }
 }
 
 .contacts-container div {
     margin-bottom: 40px;
 }
 
-
 .contacts-container p {
     color: #888890;
     line-height: 2;
     font-size: 14px;
 }
-
 
 .bottom-container h4 {
     margin: 0;
@@ -49,6 +144,7 @@
 .contacts span{
     color: #1a1a26;
     text-transform: capitalize;
+    font-weight: 500;
 
 }
 
@@ -60,14 +156,17 @@
     font-size: 25px;
     color: #1a1a26;
     margin-right: 20px;
+    &:hover {
+        color: #888890;
+    }
 }
 
 .services {
     ul {
         list-style: none;
-        // margin: 0;
         padding: 0;
         li{
+            font-weight: 400;
             a {
                 color: #888890;
                 text-decoration: none;
@@ -78,10 +177,12 @@
     }
 }
 
+.services a:hover {
+    color: #1a1a26;
+}
+
 .instagram {
     width: 25%;
-    
-    // display: flex;
 }
 
 .instagram h4 {
@@ -92,26 +193,14 @@
     justify-content: space-between;
     width: 90%;
     margin-bottom: 5px;
+}
 
-    // width: 100%;
-    // display: inline-block;
-    // width: 33%;
-    // display: block;
-    // display: flex;
-
-    // width: 33%;
-    // display: flex;
-    // width: 25%;
+.insta-gallery div {
+    margin-right: 5px;
 }
 
 .insta-gallery img {
-
     justify-content: space-between;
-    // margin: ma;
-    // display: block;
-    // display: flex;
-    // display: flex;
-    // justify-content: space-between;
 }
 
 .payment-gallery {
@@ -119,16 +208,30 @@
 }
 
 .payment-gallery div{
-    
     margin: 20px 10px 0 0;
 }
 footer div {
     color: #888890;
     display: flex;
     justify-content: space-between;
-    // background: green;
+    font-weight: 400;
 }
 
 footer strong {
     color: #1a1a26;
+}
+
+@media (max-width: 940px){
+    footer {
+        padding: 15px;
+        font-size: 12px;
+    }
+}
+
+@media (max-width: 760px) {
+    footer div {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
 }
