--- a/styles/components/_header.scss
+++ b/styles/components/_header.scss
@@ -2,6 +2,7 @@ header {
     margin-top: 25px;
 }
 
+// top nav styling 
 .top-nav {
     display: flex;
     justify-content: space-between;
@@ -16,16 +17,77 @@ header {
     }
 }
 
-// .top-nav div {
-//     width: 33%;
-// }
+.top-nav-l li:last-child{
+    display: none;
+}
 
 .top-nav-l, .top-nav-r {
     display: flex;
+    flex-wrap: wrap;
+}
+
+@media (max-width: 940px) {
+    .top-nav {
+        padding: 15px;
+    }
+    .top-nav-l, .top-nav-r {
+        padding: 15px;
+    }
+}
+
+// top nav - right menu leaves
+@media (max-width: 880px) {
+    .top-nav {
+        flex-direction: column;
+        justify-content: space-around;
+        width: 100%;
+        align-items: center;
+        div {
+            width: 100%;
+            margin: 0 auto;
+        }
+    }
+
+    .top-nav-l {
+        justify-content: space-around;
+    }
+
+    .top-nav-l li:last-child{
+        display: initial;
+    }
+    
+    .top-nav div ul {
+        margin-top: -20px;
+    }
+
+    .top-nav div {
+        margin-top: 5px;
+    }
+
+    ul.top-nav-r  {
+        display: none;
+        justify-content: space-around;
+        order: 1;
+        li {
+            margin: 0;
+        }
+    }
+
+    .logo {
+        display: flex;
+        margin: auto;
+        padding: 20px 0;
+    }
 }
 
 .top-nav-l li {
     margin-right: 25px;
+}
+
+@media (max-width: 1100px) {
+    .top-nav-l li{
+        margin-right: 10px;
+    }
 }
 
 .top-nav-r {
@@ -45,51 +107,32 @@ header {
     padding: 0 6px;
     bottom: 10px;
     left: 10px;
-
-
 }
-
-// .top-nav ul {
-//     list-style: none;
-//     margin: 0;
-//     padding: 0;
-// }
 
 .top-nav a {
     text-decoration: none;
     color: #1a1a26;
     text-transform: uppercase;
     &:hover {
-        border-bottom: 1px solid #1a1a26;
+        color: #888890;
     }
 }
 
-// .top-nav a:hover {
-//     border-bottom: 1px solid #1a1a26;
-// }
-
 .logo {
     margin: 0 auto;
-    // display: flex;
-    // justify-content: center;
-    // align-items: center;  
-    // align-content: center;
-    // align-self: center;  
+    justify-content: center;
 }
 
-// .top-nav-l {
-//     display: flex;
-//     flex-direction: row;
-// }
+@media (max-width: 940px){
+    .logo img {
+    }
+}
 
+// maing hero styling
 .headings {
-    // background: red;
     display: flex;
-    min-height: 90vh;
     margin-top: 25px;
-    // max-width: 100%;
     background-image: linear-gradient(rgba(255,255,255,0.4), rgba(255,255,255,0.6)), url(../assets/hero.jpg);
-    // background-image: linear-gradient(rgba(255, 255, 255, 0.5), rgba(255,255,255,0.5)), url(images/bearhero.jpg);
     background-size: cover;
     background-position: center;
     text-transform: capitalize;
@@ -99,21 +142,35 @@ header {
     h3{
         color: #888890;
         margin: 0;
-        // 
-       
+        padding-top: 250px;
+        font-weight: 400;
     }
 }
 
 .headings h1 {
     margin: 0;
     font-weight: 500px;
+    padding: 0 0 50px;
 }
 
-.headings div {
-    // margin-top: 70px;
+.arrows {
+    display: flex;
+    width: 95vw;
+    justify-content: space-between;
+    margin: 20px;
+    font-size: 50px;
+    color: #888890;
 }
 
-.headings a {
+.arrows a {
+    background-color: none;
+    color: #1a1a26;
+    &:hover {
+        color: #888890;
+    }
+}
+
+.shop-now a {
     text-transform: uppercase;
     color: white;
     text-decoration: none;
@@ -122,11 +179,11 @@ header {
     &:hover {
         background-color: #888890; 
     }
-    // margin: 200px;
 }
 
 .shop-now {
-    margin-top: 50px;
+    margin-top: 30px;
+    padding-bottom: 250px;
 }
 
 .scroll-buttons {
@@ -135,7 +192,6 @@ header {
     justify-content: space-around;
     align-items: center;
     align-self: flex-end;
-    // margin: 0 auto;
     color: #1a1a26;
     padding: 20px;
     a {
@@ -145,10 +201,10 @@ header {
         font-size: 15px;
         &:hover {
             background-color: transparent;
-            
         }
     }
 }
+
 .scroll-buttons i:hover {
     color: #888890;
     transform: scale(1.5);
