--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,10 +1,10 @@
 @import "components/_normalize.scss";
 @import "components/_typography.scss";
-@import "components/_header";
-@import "components/_footer";
+@import "components/_header.scss";
+@import "components/_footer.scss";
 @import "components/_interior.scss";
 @import "components/_interior-gallery.scss";
-// @import "components/"
+
 
 .wrapper {
     max-width: 1170px;
@@ -19,4 +19,10 @@ img {
 //save the partial
 //delete the partial
 // import the partial
-//save style.css
+//save style.scss
+
+//make partial
+//import partial
+//save partial
+// ???????
+
